# novel

./: README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
assets/: default.ts  style.less
pages/components/: add-select.vue  shortcut.vue  space.vue
pages/config/: App.vue  index.html  main.ts
pages/config/constants/: config.ts
pages/config/views/: setting.vue
pages/main/: App.vue  index.html  main.ts  preload.ts
pages/main/views/: novel.vue
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  setup.rs
src-tauri/src/command/: fs.rs  mod.rs  novel.rs
src-tauri/src/novel/: mod.rs
src-tauri/src/utils/: request.rs
typings/: config.d.ts
utils/: cache.ts  config.ts  emit.ts  loop_queue.ts  novel.ts  shortcut.ts  shotcut.ts  utils.ts
