[package]
name = "novel"
version = "0.0.0"
description = "novel"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = ["tray-icon", "image-ico"] }
tauri-plugin-shell = "2.0.2"
tauri-plugin-single-instance = "2.0.1"
tauri-plugin-fs = "2.0.3"
tauri-plugin-global-shortcut = "2.0.1"
tauri-plugin-dialog = "2.0.3"
tauri-plugin-window-state = "2.0.2"
regex = "1.10.2"
reqwest = "0.12.9"
once_cell = "1.19.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

